Fixed admin terminal line-spacings

--- a/src/admin/Admin.module.scss
+++ b/src/admin/Admin.module.scss
@@ -1,17 +1,11 @@
 .container {
-    display: flex;
-    flex-flow: column;
     height: 100%;
 }
 
 .terminal {
     background-color: var(--text-color);
-    display: flex;
-    flex-flow: column;
     padding: 8px 16px;
-    flex: 1 1 auto;
     height: 35vw;
-    overflow: auto;
 }
 
 .content {
@@ -19,6 +13,10 @@
     font-size: 12px;
     font-family: monospace;
     line-height: 4px;
+
+    p {
+        line-height: 16px;
+    }
 }
 
 .toggle {
